cli/tests/snapshot/inputs/errors/destructuring_default_merge.ncl
# capture = 'stderr'
# command = ['eval']
let { x ? true } = { x | default = false } in x
